samples/_failures_safe/1761691019_ff2c5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d4c3073.c: In function ‘main’:
./samples/SAFE/__tmp_7d4c3073.c:139:12: error: missing terminating " character
  139 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_7d4c3073.c:139:5: error: expected expression at end of input
  139 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_7d4c3073.c:139:5: error: expected declaration or statement at end of input
